# think-cli

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  PLAN.md  README.md  WHY.md  pyproject.toml
agent/: IDENTITY.md  MEMORY.md.template  OVERVIEW.md  SOUL.md  TOOLS.md  USER.md
src/think/: __init__.py  cli.py  config.py  const.py  exporter.py  importer.py
src/think/commands/: __init__.py  add.py  data_import.py  delete.py  export.py  get.py  init.py  ls.py  review.py  search.py  stats.py  tags.py  update.py
src/think/core/: models.py
src/think/db/: __init__.py  connection.py  schema.py
tests/: conftest.py
tests/integration/: test_commands.py  test_workflow.py
