[project]
name = "dong-think"
version = "0.7.3"
description = "思咚咚 - 记录灵感和想法的 CLI 工具"
authors = [{name = "gudong", email = "gudong@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "dong-core>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0",
]

[project.scripts]
dong-think = "think.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
